@@ -137,16 +137,6 @@ public class S3Dispatcher implements WebDispatcher {
                                           .withChronology(IsoChronology.INSTANCE)
                                           .withZone(ZoneOffset.ofHours(0));
 
-    /**
-     * RFC 822 date/time formatter.
-     */
-    public static final DateTimeFormatter RFC822_INSTANT =
-            new DateTimeFormatterBuilder().appendPattern("EEE, dd MMM yyyy HH:mm:ss 'GMT'")
-                                          .toFormatter()
-                                          .withLocale(Locale.ENGLISH)
-                                          .withChronology(IsoChronology.INSTANCE)
-                                          .withZone(ZoneOffset.ofHours(0));
-
     private static final Map<String, String> headerOverrides;
 
     static {
@@ -658,10 +648,10 @@ public class S3Dispatcher implements WebDispatcher {
                 object.markDeleted();
             } catch (IOException ignored) {
                 signalObjectError(webContext,
-                        bucket.getName(),
-                        id,
-                        S3ErrorCode.InternalError,
-                        Strings.apply("Error while marking file as deleted"));
+                                  bucket.getName(),
+                                  id,
+                                  S3ErrorCode.InternalError,
+                                  Strings.apply("Error while marking file as deleted"));
                 return;
             }
         }
@@ -794,7 +784,8 @@ public class S3Dispatcher implements WebDispatcher {
         StoredObject object = bucket.getObject(id);
         if (!object.exists() && !object.isMarkedDeleted() && awsUpstream.isConfigured()) {
             URL fetchURL = awsUpstream.generateGetObjectURL(bucket, object, sendFile);
-            Consumer<BoundRequestBuilder> requestTuner = requestBuilder -> requestBuilder.setMethod(sendFile ? "GET" : "HEAD");
+            Consumer<BoundRequestBuilder> requestTuner =
+                    requestBuilder -> requestBuilder.setMethod(sendFile ? "GET" : "HEAD");
             webContext.enableTiming(null).respondWith().tunnel(fetchURL.toString(), requestTuner, null, null);
             return;
         }
@@ -829,7 +820,7 @@ public class S3Dispatcher implements WebDispatcher {
             String contentType = MimeHelper.guessMimeType(object.getFile().getName());
             response.addHeader(HttpHeaderNames.CONTENT_TYPE, contentType);
             response.addHeader(HttpHeaderNames.LAST_MODIFIED,
-                               RFC822_INSTANT.format(Instant.ofEpochMilli(object.getFile().lastModified())));
+                               Response.RFC822_INSTANT.format(Instant.ofEpochMilli(object.getFile().lastModified())));
             response.addHeader(HttpHeaderNames.CONTENT_LENGTH, object.getFile().length());
             response.status(HttpResponseStatus.OK);
         }
@@ -967,7 +958,7 @@ public class S3Dispatcher implements WebDispatcher {
                                       .stream()
                                       .sorted(Comparator.comparing(Map.Entry::getKey))
                                       .map(Map.Entry::getValue)
-                                      .collect(Collectors.toList()));
+                                      .toList());
 
         file.deleteOnExit();
         if (!file.exists()) {
